<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:elevation="10dp"
            android:src="@drawable/poker"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"

            android:layout_height="match_parent"

            android:background="#F6FFFE"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/mainbg"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_baseline_arrow_back" />


            </RelativeLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="70dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/textmeone"
                        android:text="@string/poker_1"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        />

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"

                        app:videoId="JOomXP-r1wY"
                        app:autoPlay="false"
                        app:showFullScreenButton="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/textmeone"
                        android:text="@string/poker_2"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/textmeone"
                        android:text="@string/poker_3"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />


                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>