<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:elevation="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                >

                <ImageView
                    android:onClick="back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_arrow_back_black"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/back"
                    />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="10dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logoblue" />


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="About Us"
                android:textColor="#000"
                android:textSize="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#000"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:paddingRight="10dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="IVY MRK EVT"
                        android:textColor="#000"
                        android:textSize="25dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/benchnine_light"
                        android:text="@string/about_us"
                        android:textColor="#000"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Our Team"
                        android:textColor="#000"
                        android:textSize="25dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/benchnine_light"
                        android:text="@string/about_us_2"
                        android:textColor="#000"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/benchnine_light"
                        android:text="@string/about_us_3"
                        android:textColor="#000"
                        android:textSize="20dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Contact Us"
                        android:textColor="#000"
                        android:textSize="25dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/benchnine_light"
                            android:text="Email:"
                            android:textColor="#000"
                            android:textSize="22dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/benchnine_light"
                            android:text="jagtapazad@gmail.com"
                            android:textColor="#000"
                            android:textIsSelectable="true"
                            android:textSize="22dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/benchnine_light"
                            android:text="Contact No.:"
                            android:textColor="#000"
                            android:textSize="22dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/benchnine_light"
                            android:layout_marginLeft="10dp"
                            android:text="+91-9635952222"
                            android:textColor="#000"
                            android:textIsSelectable="true"
                            android:textSize="22dp" />

                    </LinearLayout>


                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    />


                </LinearLayout>


            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>